[package]
name = "stable_fun"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stable_fun"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version="0.29.0", features=["init-if-needed"]}
anchor-spl = { version = "0.29.0", features = ["metadata"] }
mpl-token-metadata = { version = "3.2.3" }
spl-token = "4.0.0"
switchboard-on-demand = "0.1.17"
